el admin puede insertar libros en la bd

--- a/web/admin/adminMenu.html
+++ b/web/admin/adminMenu.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p>welcome to <i>admin</i> main page</p>
-<a href="/firstmarket/admin/manageBooks.jsp">Gestionar BD de libros</a>
+<a href="/firstmarket/fc/adminWantsNewBook">nuevo libro</a>
 </body>
 </html>
