el admin puede ver los libros en la bd

--- a/web/admin/adminMenu.html
+++ b/web/admin/adminMenu.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <p>welcome to <i>admin</i> main page</p>
-<a href="/firstmarket/fc/adminWantsNewBook">nuevo libro</a>
+<a href="/firstmarket/fc/adminWantsNewBook">new book</a>
+<br/>
+<a href="/firstmarket/fc/adminWantsShowBooks">show books</a>
 </body>
 </html>
