feat: admin can edit book info

--- a/web/admin/mainMenu.html
+++ b/web/admin/mainMenu.html
@@ -6,8 +6,13 @@
 </head>
 <body>
 <p>welcome to <i>admin</i> main page</p>
+<a href="/firstmarket/fc/admin/bookManager">Books Manager</a>
+
+<!-- 
 <a href="/firstmarket/fc/adminWantsNewBook">new book</a>
 <br/>
 <a href="/firstmarket/fc/adminWantsShowBooks">show books</a>
+ -->
+
 </body>
 </html>
