--- a/web/admin/mainMenu.html
+++ b/web/admin/mainMenu.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
-</head>
-<body>
-<p>welcome to <i>admin</i> main page</p>
-<a href="/firstmarket/fc/admin/books/booksManager">Books Manager</a>
-
-<!-- 
-<a href="/firstmarket/fc/adminWantsNewBook">new book</a>
-<br/>
-<a href="/firstmarket/fc/adminWantsShowBooks">show books</a>
- -->
-
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Admin</title>
+	</head>
+	<body>
+		<h3>welcome to <i>admin</i> main page</h3>
+		<a href="/firstmarket/fc/admin/books/booksManager">Books Manager</a>
+		<br/>
+		<a href="/firstmarket/fc/admin/categories/categoriesManager">Categories Manager</a>
+	</body>
 </html>
